refacto eslint, end test configuration, doc bin monorepo, refacto api
