# api/src/person/person.controller.ts
@@ -6,22 +6,23 @@ import {
   Get,
   HttpCode,
   HttpStatus,
-  NotFoundException,
   Param,
   Patch,
   UseInterceptors,
-  UsePipes,
-  ValidationPipe,
   InternalServerErrorException,
+  ParseUUIDPipe,
 } from '@nestjs/common';
 import { PersonService } from '@fil-rouge/api/person/person.service';
 import { UpdatePersonDto } from '@fil-rouge/api/person/dto/update-person.dto';
 import { Person } from '@fil-rouge/api/person/entities/person.entity';
+import { PersonByIdPipe } from '@fil-rouge/api/pipes/person-by-pipe';
 
 @Controller('person')
 @UseInterceptors(ClassSerializerInterceptor)
 export class PersonController {
-  constructor(private readonly personService: PersonService) {}
+  constructor(
+    private readonly personService: PersonService,
+  ) {}
 
   @Get()
   public async findAll(): Promise<Person[]> {
@@ -29,36 +30,29 @@ export class PersonController {
   }
 
   @Get(':id')
-  public async findOne(@Param('id') id: string): Promise<Person> {
-    return this.personService.findOne(id);
+  public async findOne(
+    @Param('id', ParseUUIDPipe, PersonByIdPipe) person: Person): Promise<Person> {
+    return person;
   }
 
   @Patch(':id')
-  @UsePipes(
-    new ValidationPipe({
-      whitelist: true,
-      transform: true,
-      transformOptions: { enableImplicitConversion: true },
-      forbidUnknownValues: false,
-      skipMissingProperties: true,
-    }),
-  )
   public async update(
-    @Param('id') id: string,
+    @Param('id', ParseUUIDPipe, PersonByIdPipe) person: Person,
     @Body() updatePersonDto: UpdatePersonDto,
   ): Promise<Person> {
     try {
-      return await this.personService.update(id, updatePersonDto);
-    } catch (err) {
-      if (err instanceof NotFoundException) throw err;
-
-      throw new InternalServerErrorException();
+      return await this.personService.update(updatePersonDto, person);
+    } catch (_err) {
+      throw new InternalServerErrorException('Error update');
     }
   }
 
+
   @Delete(':id')
   @HttpCode(HttpStatus.OK)
-  public async remove(id: string): Promise<void> {
-    await this.personService.remove(id);
+  public async remove(
+    @Param('id', ParseUUIDPipe, PersonByIdPipe) person: Person,
+  ): Promise<void> {
+    await this.personService.remove(person.id);
   }
 }
